test: init structure